test/parser/reject/bad-mapping-invalid-token.ptk
# expected: E1111
rule group = "value" => "bad" ;